--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 div {
     display:grid;
     place-items: center;
+    color: white;
+}
+html{
+    background-color:#171717;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
